--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    // https://mvnrepository.com/artifact/pl.pragmatists/JUnitParams
+    testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
+
 
 }
 
