[RAS-32] [문자열을 외부 설정으로 빼내기]
1. properties configuration 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,12 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
+
+
+my-app.admin-username=admin
+my-app.admin-password=admin
+my-app.user-username=user
+my-app.user-password=user
+my-app.client-id=myApp
+my-app.client-secret=myAppSecret
