[RAS-30] [스프링 시큐리티 OAuth2 인증 서버 설정]
1. spring-security-oauth2-authorization-server 라이브러리 적용
2. grant type을 password에서client_credentials 변경
    password grant type이 제외됨.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,17 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.oauth2=DEBUG
 
 
+# Security Settings
+spring.security.oauth2.client.registration.bael.authorization-grant-type=client_credentials
+spring.security.oauth2.client.registration.bael.client-id=myApp
+spring.security.oauth2.client.registration.bael.client-secret=pass
+
+spring.security.oauth2.client.provider.bael.token-uri=http://localhost:8085/oauth/token
+
+# My Application Properties Settings
 my-app.admin-username=admin
-my-app.admin-password=admin
+my-app.admin-password=1234
 my-app.user-username=user
-my-app.user-password=user
+my-app.user-password=1234
 my-app.client-id=myApp
 my-app.client-secret=myAppSecret
