--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
     implementation "org.springframework.security:spring-security-oauth2-authorization-server:0.3.1"
-    //implementation "org.springframework.security:spring-boot-starter-oauth2-resource-server:0.3.1"
 
     // https://mvnrepository.com/artifact/org.springframework.security.oauth.boot/spring-security-oauth2-autoconfigure
     //implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.6.8'
