--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 ext {
     set('docsDir', file("src/main/docs/asciidoc"))
     snippetsDir = file("${buildDir}/generated-snippets")
-    set('outputDocsDir', file("${projectDir}/resources/static/docs"))
+    //set('outputDocsDir', file("${projectDir}/resources/static/docs"))
 
 }
 
@@ -38,7 +38,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt
+    implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
+
+
+
     implementation "org.springframework.security:spring-security-oauth2-authorization-server:0.3.1"
+    //implementation 'org.springframework.security:spring-security-config'
 
     // https://mvnrepository.com/artifact/org.springframework.security.oauth.boot/spring-security-oauth2-autoconfigure
     //implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.6.8'
