--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.mvc.static-path-pattern=/docs/**
 spring.web.resources.static-locations=classpath:/static/docs/
@@ -19,12 +20,17 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.oauth2=DEBUG
 
 
-# Security Settings
-spring.security.oauth2.client.registration.bael.authorization-grant-type=client_credentials
-spring.security.oauth2.client.registration.bael.client-id=myApp
-spring.security.oauth2.client.registration.bael.client-secret=pass
+# Security Authorization Settings
+#spring.security.oauth2.client.registration.bael.authorization-grant-type=client_credentials
+#spring.security.oauth2.client.registration.bael.client-id=myApp
+#spring.security.oauth2.client.registration.bael.client-secret=pass
 
-spring.security.oauth2.client.provider.bael.token-uri=http://localhost:8085/oauth/token
+
+# Security resourceserver Settings
+#spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:bael-jwt.jks
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/oauth2/jwks
+
 
 # My Application Properties Settings
 my-app.admin-username=admin
@@ -32,4 +38,4 @@ my-app.admin-password=1234
 my-app.user-username=user
 my-app.user-password=1234
 my-app.client-id=myApp
-my-app.client-secret=myAppSecret
+my-app.client-secret=pass
